# manga-reader

./: .env.example  .gitignore  README.md  alembic.ini  check_db.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: bookmark.py  chapter_routes.py  comment.py  like.py  logs.py  manga_routes.py  page_routes.py  progress.py  rating.py  reader_routes.py  router.py  user.py
app/cache/: client.py  keys.py
app/core/: __init__.py  datetime_utils.py  exceptions.py  logger.py  password_policy.py  rate_limit.py  security.py
app/db/: base.py  session_runtime.py
app/db/models/: __init__.py  bookmark.py  chapter.py  comment.py  genre.py  like.py  manga.py  page.py  rating.py  reading_progress.py  user.py
app/middleware/: logging_middleware.py  request_guard.py
app/migrations/: env.py
app/migrations/versions/: 20260416_01_bootstrap_reader_schema.py  20260416_02_add_user_features.py  20260428_01_index_comments_created_at.py  (+2 more)
app/services/: fuzzy_search.py  rating_service.py
app/tasks/: queue.py  worker.py
app/templates/: base.html  catalog.html  index.html  manga.html  profile.html  reader.html
app/web/: __init__.py  routes.py
scripts/: seed_db.py
tests/: conftest.py
tests/test_api/: test_auth.py  test_likes.py  test_manga.py  test_ratings.py  test_request_guard.py  test_request_id.py  test_search_suggest.py
tests/test_services/: test_config.py  test_fuzzy_search.py  test_json_logger.py  test_password_policy.py  test_rate_limit.py
(+6 files in other folders)
